--- a/res/layout/dialog_filehandle.xml
+++ b/res/layout/dialog_filehandle.xml
@@ -6,6 +6,6 @@
     <EditText android:id="@id/editText1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:ems="10">
         <requestFocus />
     </EditText>
-    <Button android:id="@id/button1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="改名" />
-    <Button android:id="@id/button2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="打开" />
+    <Button android:id="@id/button1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Rename" />
+    <Button android:id="@id/button2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:text="Turn On" />
 </LinearLayout>
